GTIFGetDefn(): add missing normalization of angular units to degree
Contrary to what the documentation of GTIFDefn::ProjParm[] mentionned,
we failed to normalize angular measures to degrees when reading them
from projection parameters (ProjXXXXXGeoKey's) when ProjCoordTransGeoKey
was present (but we did normalize them when reading them from the PROJ
database when there were was only a EPSG PCS code)

Relates to https://github.com/OSGeo/gdal/issues/10154 and https://github.com/OSGeo/gdal/pull/10158

--- a/libgeotiff/test/Makefile.am
+++ b/libgeotiff/test/Makefile.am
@@ -55,7 +55,9 @@ EXTRA_DIST = testlistgeo testlistgeo_out.dist \
              data/lambert_cylindrical_equal_area.tif \
              data/ProjectedCSTypeGeoKey_4087_equidistant_cylindrical.tif \
              data/equidistant_cylindrical.tif \
-             data/pixel_is_point_wgs84.tif
+             data/pixel_is_point_wgs84.tif \
+             data/epsg_27563_only_pcs_code.tif \
+             data/epsg_27563_allgeokeys.tif
 
 check-local:
 	$(TESTLISTGEO) $(LISTGEOEXE)
