--- a/libgeotiff/test/testlistgeo_out.dist
+++ b/libgeotiff/test/testlistgeo_out.dist
@@ -2005,3 +2005,111 @@ Upper Right   (  2d 0' 0.00"E, 54d 0' 0.00"N)
 Lower Right   (  2d 0' 0.00"E, 50d 0' 0.00"N)
 Center        (  0d 0' 0.00"E, 52d 0' 0.00"N)
 
+Testing listgeo epsg_27563_only_pcs_code.tif
+Geotiff_Information:
+   Version: 1
+   Key_Revision: 1.0
+   Tagged_Information:
+      ModelTiepointTag (2,3):
+         0                 0                 0                
+         827294.141443773  523985.644431661  0                
+      ModelPixelScaleTag (1,3):
+         0.500636999995913 0.500637000001734 0                
+      End_Of_Tags.
+   Keyed_Information:
+      GTModelTypeGeoKey (Short,1): ModelTypeProjected
+      GTRasterTypeGeoKey (Short,1): RasterPixelIsArea
+      GTCitationGeoKey (Ascii,33): "NTF (Paris) / Lambert Sud France"
+      GeogCitationGeoKey (Ascii,12): "NTF (Paris)"
+      GeogAngularUnitsGeoKey (Short,1): Angular_Grad
+      ProjectedCSTypeGeoKey (Short,1): Code-27563 (NTF (Paris) / Lambert Sud France)
+      ProjLinearUnitsGeoKey (Short,1): Linear_Meter
+      End_Of_Keys.
+   End_Of_Geotiff.
+
+PCS = 27563 (NTF (Paris) / Lambert Sud France)
+Projection = 18093 (Lambert Sud France)
+Projection Method: CT_LambertConfConic_1SP
+   ProjNatOriginLatGeoKey: 44.100000 ( 44d 6' 0.00"N)
+   ProjNatOriginLongGeoKey: 0.000000 (  0d 0' 0.00"E)
+   ProjScaleAtNatOriginGeoKey: 0.999877
+   ProjFalseEastingGeoKey: 600000.000000 m
+   ProjFalseNorthingGeoKey: 200000.000000 m
+GCS: 4807/NTF (Paris)
+Datum: 6807/Nouvelle Triangulation Francaise (Paris)
+Ellipsoid: 7011/Clarke 1880 (IGN) (6378249.20,6356515.00)
+Prime Meridian: 8903/Paris (2.337229/  2d20'14.03"E)
+Projection Linear Units: 9001/metre (1.000000m)
+
+Corner Coordinates:
+Upper Left    (  827294.141,  523985.644)  (  2d59' 3.48"E, 46d58'37.71"N)
+Lower Left    (  827294.141,  523980.638)  (  2d59' 3.47"E, 46d58'37.54"N)
+Upper Right   (  827299.148,  523985.644)  (  2d59' 3.71"E, 46d58'37.70"N)
+Lower Right   (  827299.148,  523980.638)  (  2d59' 3.71"E, 46d58'37.54"N)
+Center        (  827296.645,  523983.141)  (  2d59' 3.59"E, 46d58'37.62"N)
+
+Testing listgeo epsg_27563_allgeokeys.tif
+Geotiff_Information:
+   Version: 1
+   Key_Revision: 1.0
+   Tagged_Information:
+      ModelTiepointTag (2,3):
+         0                 0                 0                
+         827294.141443773  523985.644431661  0                
+      ModelPixelScaleTag (1,3):
+         0.500636999995913 0.500637000001734 0                
+      End_Of_Tags.
+   Keyed_Information:
+      GTModelTypeGeoKey (Short,1): ModelTypeProjected
+      GTRasterTypeGeoKey (Short,1): RasterPixelIsArea
+      GTCitationGeoKey (Ascii,33): "NTF (Paris) / Lambert Sud France"
+      GeographicTypeGeoKey (Short,1): GCS_NTF_Paris
+      GeogCitationGeoKey (Ascii,12): "NTF (Paris)"
+      GeogGeodeticDatumGeoKey (Short,1): Code-6807 (Nouvelle Triangulation Francaise (Paris))
+      GeogPrimeMeridianGeoKey (Short,1): PM_Paris
+      GeogAngularUnitsGeoKey (Short,1): Angular_Grad
+      GeogAngularUnitSizeGeoKey (Double,1): 0.0157079632679489
+      GeogEllipsoidGeoKey (Short,1): Ellipse_Clarke_1880_IGN
+      GeogSemiMajorAxisGeoKey (Double,1): 6378249.2        
+      GeogInvFlatteningGeoKey (Double,1): 293.466021293627 
+      GeogPrimeMeridianLongGeoKey (Double,1): 2.5969213        
+      GeogTOWGS84GeoKey (Double,7): -168             -60              320              
+0                0                0                
+0                
+      ProjectedCSTypeGeoKey (Short,1): Code-27563 (NTF (Paris) / Lambert Sud France)
+      PCSCitationGeoKey (Ascii,33): "NTF (Paris) / Lambert Sud France"
+      ProjectionGeoKey (Short,1): Code-18093 (Lambert Sud France)
+      ProjCoordTransGeoKey (Short,1): CT_LambertConfConic_1SP
+      ProjLinearUnitsGeoKey (Short,1): Linear_Meter
+      ProjLinearUnitSizeGeoKey (Double,1): 1                
+      ProjNatOriginLongGeoKey (Double,1): 0                
+      ProjNatOriginLatGeoKey (Double,1): 49               
+      ProjFalseEastingGeoKey (Double,1): 600000           
+      ProjFalseNorthingGeoKey (Double,1): 200000           
+      ProjScaleAtNatOriginGeoKey (Double,1): 0.999877499      
+      VerticalUnitsGeoKey (Short,1): Linear_Meter
+      End_Of_Keys.
+   End_Of_Geotiff.
+
+PCS = 27563 (NTF (Paris) / Lambert Sud France)
+Projection = 18093 (Lambert Sud France)
+Projection Method: CT_LambertConfConic_1SP
+   ProjNatOriginLatGeoKey: 44.100000 ( 44d 6' 0.00"N)
+   ProjNatOriginLongGeoKey: 0.000000 (  0d 0' 0.00"E)
+   ProjScaleAtNatOriginGeoKey: 0.999877
+   ProjFalseEastingGeoKey: 600000.000000 m
+   ProjFalseNorthingGeoKey: 200000.000000 m
+GCS: 4807/NTF (Paris)
+Datum: 6807/Nouvelle Triangulation Francaise (Paris)
+Ellipsoid: 7011/Clarke 1880 (IGN) (6378249.20,6356515.00)
+Prime Meridian: 8903/Paris (2.337229/  2d20'14.03"E)
+TOWGS84: -168,-60,320,0,0,0,0
+Projection Linear Units: 9001/metre (1.000000m)
+
+Corner Coordinates:
+Upper Left    (  827294.141,  523985.644)  (  2d59' 3.48"E, 46d58'37.71"N)
+Lower Left    (  827294.141,  523980.638)  (  2d59' 3.47"E, 46d58'37.54"N)
+Upper Right   (  827299.148,  523985.644)  (  2d59' 3.71"E, 46d58'37.70"N)
+Lower Right   (  827299.148,  523980.638)  (  2d59' 3.71"E, 46d58'37.54"N)
+Center        (  827296.645,  523983.141)  (  2d59' 3.59"E, 46d58'37.62"N)
+
