Add LIBGEOTIFF_MAJOR_VERSION, LIBGEOTIFF_MINOR_VERSION, LIBGEOTIFF_PATCH_VERSION, LIBGEOTIFF_REV_VERSION, and LIBGEOTIFF_STRING_VERSION variables in geotiff.h, and autogenerate it
Fix #119

--- a/libgeotiff/CMakeLists.txt
+++ b/libgeotiff/CMakeLists.txt
@@ -19,12 +19,10 @@ SET(GEOTIFF_LIBRARY_TARGET geotiff_library)
 SET(CMAKE_COLOR_MAKEFILE ON)
 
 # Version information
-set(PROJECT_VERSION_MAJOR 1)
-set(PROJECT_VERSION_MINOR 7)
-set(PROJECT_VERSION_PATCH 3)
-set(PROJECT_VERSION
-  "${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}")
-set(GeoTIFF_VERSION ${PROJECT_VERSION})
+set(LIBGEOTIFF_MAJOR_VERSION 1)
+set(LIBGEOTIFF_MINOR_VERSION 7)
+set(LIBGEOTIFF_PATCH_VERSION 4)
+set(LIBGEOTIFF_REV_VERSION 0)
 
 # Set library version to match that of autoconf:
 # libgeotiff.so -> libgeotiff.so.5
@@ -33,8 +31,19 @@ set(GeoTIFF_VERSION ${PROJECT_VERSION})
 set(LINK_SOVERSION "5")
 set(LINK_VERSION "5.3.2")
 
+set(PROJECT_VERSION_MAJOR ${LIBGEOTIFF_MAJOR_VERSION})
+set(PROJECT_VERSION_MINOR ${LIBGEOTIFF_MINOR_VERSION})
+set(PROJECT_VERSION_PATCH ${LIBGEOTIFF_PATCH_VERSION})
+set(PROJECT_VERSION
+  "${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}")
+
+set(LIBGEOTIFF_STRING_VERSION "${PROJECT_VERSION}")
+set(LIBGEOTIFF_VERSION "${LIBGEOTIFF_MAJOR_VERSION}${LIBGEOTIFF_MINOR_VERSION}${LIBGEOTIFF_PATCH_VERSION}${LIBGEOTIFF_REV_VERSION}")
+
 string (TOLOWER ${PROJECT_NAME} PROJECT_NAME_LOWER)
 string (TOUPPER ${PROJECT_NAME} PROJECT_NAME_UPPER)
+
+configure_file(geotiff.h.in ${CMAKE_CURRENT_BINARY_DIR}/geotiff.h @ONLY)
 
 # Allow advanced users to generate Makefiles printing detailed commands
 MARK_AS_ADVANCED(CMAKE_VERBOSE_MAKEFILE)
@@ -131,7 +140,7 @@ MESSAGE(STATUS "Generating geo_config.h header - done")
 # Installation settings
 
 SET(GEOTIFF_LIB_HEADERS
-    geotiff.h
+    ${CMAKE_CURRENT_BINARY_DIR}/geotiff.h
     geotiffio.h
     geovalues.h
     geonames.h
@@ -159,8 +168,6 @@ SET(GEOTIFF_MAN_PAGES
     man/man1/applygeo.1
     man/man1/geotifcp.1
     man/man1/listgeo.1)
-
-#    ${PROJECT_BINARY_DIR}/geotiff_version.h
 
 # Install doc files
 if(BUILD_DOC)
