--- a/libgeotiff/configure.ac
+++ b/libgeotiff/configure.ac
@@ -1,22 +1,29 @@
 
-
-m4_define([VERSION_MAJOR], [1])
-m4_define([VERSION_MINOR], [7])
-m4_define([VERSION_POINT], [3])
-m4_define([GEOTIFF_VERSION],
-          [VERSION_MAJOR.VERSION_MINOR.VERSION_POINT])
-
 m4_include([m4/ax_prog_doxygen.m4])
 
 AC_PREREQ([2.59])
-AC_INIT([libgeotiff], [GEOTIFF_VERSION], [warmerdam@pobox.com])
+AC_INIT([libgeotiff], [1.7.4], [warmerdam@pobox.com])
 AC_CANONICAL_BUILD
 
 AC_CONFIG_MACRO_DIR([m4])
 
-RELEASE_VERSION=GEOTIFF_VERSION
-AC_SUBST([RELEASE_VERSION])
-AC_CONFIG_HEADER(geo_config.h)
+LIBGEOTIFF_MAJOR_VERSION=1
+LIBGEOTIFF_MINOR_VERSION=7
+LIBGEOTIFF_PATCH_VERSION=4
+LIBGEOTIFF_REV_VERSION=0
+
+LIBGEOTIFF_STRING_VERSION=${LIBGEOTIFF_MAJOR_VERSION}.${LIBGEOTIFF_MINOR_VERSION}.${LIBGEOTIFF_PATCH_VERSION}
+LIBGEOTIFF_VERSION="${LIBGEOTIFF_MAJOR_VERSION}${LIBGEOTIFF_MINOR_VERSION}${LIBGEOTIFF_PATCH_VERSION}${LIBGEOTIFF_REV_VERSION}"
+
+AC_SUBST(LIBGEOTIFF_MAJOR_VERSION)
+AC_SUBST(LIBGEOTIFF_MINOR_VERSION)
+AC_SUBST(LIBGEOTIFF_PATCH_VERSION)
+AC_SUBST(LIBGEOTIFF_REV_VERSION)
+AC_SUBST(LIBGEOTIFF_STRING_VERSION)
+AC_SUBST(LIBGEOTIFF_VERSION)
+
+AC_CONFIG_HEADERS([geo_config.h])
+AC_CONFIG_FILES([geotiff.h])
 
 dnl #########################################################################
 dnl Checks for programs.
