--- a/libgeotiff/geotiff.h.in
+++ b/libgeotiff/geotiff.h.in
@@ -47,7 +47,13 @@
 #define GEOTIFF_SPEC_1_1_MINOR_REVISION 1
 
 /* Library version */
-#define LIBGEOTIFF_VERSION 1740
+/* LIBGEOTIFF_MAJOR_VERSION, LIBGEOTIFF_MINOR_VERSION, LIBGEOTIFF_PATCH_VERSION, LIBGEOTIFF_REV_VERSION and LIBGEOTIFF_STRING_VERSION are new since libgeotiff 1.7.4. Only LIBGEOTIFF_VERSION pre-existed */
+#define LIBGEOTIFF_MAJOR_VERSION @LIBGEOTIFF_MAJOR_VERSION@
+#define LIBGEOTIFF_MINOR_VERSION @LIBGEOTIFF_MINOR_VERSION@
+#define LIBGEOTIFF_PATCH_VERSION @LIBGEOTIFF_PATCH_VERSION@
+#define LIBGEOTIFF_REV_VERSION @LIBGEOTIFF_REV_VERSION@
+#define LIBGEOTIFF_VERSION @LIBGEOTIFF_VERSION@
+#define LIBGEOTIFF_STRING_VERSION "@LIBGEOTIFF_STRING_VERSION@"
 
 #include "geo_config.h"
 #include "geokeys.h"
