--- a/libgeotiff/cmake/Makefile.am
+++ b/libgeotiff/cmake/Makefile.am
@@ -1,5 +1,4 @@
-EXTRA_DIST  = 	FindGeoTIFF.cmake \
-		FindPROJ.cmake  \
+EXTRA_DIST  = 	FindPROJ.cmake  \
 		geo_config.h.in \
 		project-config-version.cmake.in \
 		project-config.cmake.in \
